# bevy_wasm_game

./: .gitignore  Cargo.toml  Readme.md  flake.nix  index.html
src/: game.rs  main.rs  menu.rs  splash.rs
