[package]
name = "bevy_game_menu"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.14.2", default-features = false, features = ["bevy_pbr", "bevy_state", "bevy_ui"] }
bevy = { version = "0.14.2" }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Window"] }

